Fixing modal background on mobile

--- a/src/components/NoteModal.css
+++ b/src/components/NoteModal.css
@@ -4,7 +4,7 @@
     bottom: 0;
     right: 0;
     position: fixed;
-    height: 100%;
+    height: 200%;
     width: 100%;
     background-color: rgba(48, 48, 48, 0.2);
 }
@@ -21,6 +21,7 @@
     left: 0;
     bottom: 0;
     right: 0;
+    z-index: 999;
 }
 
 .note-modal-text {
